style.css
/*General Setting*/
* {
    box-sizing: border-box;
    text-decoration: none;
    font-family: Arial, sans-serif;
    color: #000;
}

*:not(ul) {
    margin: 0;
    padding: 0;
}

html,
body {
    height: 100%;
    width: 100%;
}

body {
    background: #fff;
}

/*Mobile devices & Tablets*/
@media (max-width: 925px) {
    body {
        font-size: 16px;
    }
}

/*Laptops & Desktops*/
@media (min-width: 925px) and (max-width: 1920px) {
    body {
        font-size: 20px;
    }
}

/*TV and super large screen desktops*/
@media (min-width: 1921px) {
    body {
        font-size: 28px;
    }
}





/* Navbar */
nav {
    background: #000;
    padding-left: 15px;
    padding-right: 15px;
    height: 95px;
    /*@media's nav #nav-links depends on this*/
}

nav * {
    font-family: 'Carter One', 'Concert One', 'Patua One', cursive;
    color: #fff;
}


nav#large-screen,
nav#small-screen {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

nav#small-screen {
    font-size: 20px;
    /*font-size is the same for mobile & tablets*/
}


nav#small-screen #nav-links {
    display: none;

    position: absolute;
    top: 95px;
    left: 0;
    right: 0;
    z-index: 1;
    height: fit-content;

    background-color: #000;

    animation: dropping-nav 0.35s ease-in-out;
}

@keyframes dropping-nav {
    0% {
        opacity: 0;
    }

    70% {
        opacity: 0.7;
    }
}



nav#small-screen #nav-links>* {
    padding: 10px 20px;
}

nav#small-screen #nav-links:last-child {
    padding-bottom: 15px;
}

.nav-link {
    transition: all .2s ease-in-out;
}

nav#small-screen .nav-link:hover {
    font-weight: 600;
    transform: translate(73px, 0) scale(1.2);
}

nav#large-screen .nav-link:hover {
    font-weight: 600;
    transform: scale(1.2);
}


#menu-button,
#home-button {
    background: transparent;

    border: 1px solid #fff;
    border-radius: 6px;

    padding: 10px 20px;

    transition: 0.5s;
}

#home-button:hover {
    background: #fff;
    color: #000;
    transition: 1s;
}

/* 3-line menu icon */
#line1,
#line2,
#line3 {
    width: 35px;
    height: 3px;

    background-color: #fff;

    border-radius: 5px;
    margin: 6px 0;

    transition: 0.5s;
}

#line1.nav-expanded {
    transform: translate(0, 9px) rotate(45deg);
}

#line2.nav-expanded {
    opacity: 0;
}

#line3.nav-expanded {
    transform: translate(0, -9px) rotate(-45deg);
}

.language-dropdown {
    background: transparent;
    font-size: 12px;
    text-align: center;

    border: 1px solid #fff;
    border-radius: 25px;

    appearance: none;

    height: 27px;
    width: 75px;
    color: #fff;
    font-family: Arial, sans-serif !important;
}

.language-dropdown:hover,
.language-dropdown option {
    font-family: Arial, sans-serif !important;
    background: #fff;
    color: #000;
    transition: 1s;
}

@media (max-width: 925px) {
    nav#small-screen {
        display: flex;
    }

    nav#large-screen {
        display: none;
    }

    nav #nav-links {
        top: 65px;
    }

    .home-button {
        font-size: 24px;
    }
}

@media (min-width: 925px) and (max-width: 1920px) {
    nav {
        font-size: 24px;
    }

    nav#small-screen {
        display: none;
    }

    nav#large-screen {
        display: flex;
    }

    .home-button {
        font-size: 30px;
    }
}

@media (min-width: 1921px) {
    nav {
        font-size: 32px;
        display: none;
    }

    nav#small-screen {
        display: none;
    }

    nav#large-screen {
        display: flex;
    }

    .home-button {
        font-size: 34px;
    }
}







#animation-header {
    background: #000;
    color: #fff;
    font-family: 'Orbitron', 'Changa', sans-serif;
    font-weight: 900;
    font-size: 38px;
    text-align: center;
    letter-spacing: 4px;

    padding: 20px;

    animation: text 2s 1;
}

@keyframes text {
    0% {
        color: #000;
    }

    30% {
        letter-spacing: 7px;
    }

    85% {
        letter-spacing: 4px;
    }
}

.content .reference-title {
    font-style: italic;
}

.content a,
footer a {
    font-weight: 700;
    cursor: pointer;
}

/*FOOTER*/
hr#footer {
    border: 0.5px solid grey;
}

footer {
    height: 75px;

    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

